# MDP

./: .codecov.yml  .gitmodules  .travis.yml  README.md  codecov.sh  codecov.yml
Example/Source/: example-messenger.inl  example-module-a.inl  example-module-b.inl  example.cpp
MDP/Include/: messenger.inl
MDP/Include/MessageUtil/: set-message.inl
Messenger/Include/: messenger.inl
Messenger/Include/MessageUtil/: get-message.inl  set-message.inl
Messenger/Include/ModuleUtil/: multiplexer.inl
Messenger/Include/ModuleUtil/Message/: multiplexer.inl
Projects/CMake/: CMakeLists.txt
Projects/CMake/Example/: CMakeLists.txt
Projects/CMake/MDP/: CMakeLists.txt
Projects/CMake/Test/: CMakeLists.txt
Projects/CMake/Utility/: CMakeLists.txt
Projects/CMake/googletest/: CMakeLists.txt
Projects/MSVC/2015/: .leu  MDP.sln
Projects/MSVC/2015/Example/: Example.vcxproj  Example.vcxproj.filters
Projects/MSVC/2015/GoogleTest/: gtest.vcxproj  gtest.vcxproj.filters
Test/Include/: order-checker.inl
Test/Source/: conditional-pass-message-test.cpp  for-each-test.cpp  has-message-processor-test.cpp  message-propagation-order-test.cpp  message-tuple-order-test.cpp  messenger-test.cpp  pass-by-ref-test.cpp  pass-message-order-test.cpp  pass-message-send-receive-test.cpp  test.cpp
Test/Source/MessageUtil/: get-message-test.cpp  set-message-test.cpp
Test/Source/ModuleUtil/: multiplexer-test.cpp
VS15/: MDP.sln
VS15/Example/: Example.vcxproj  Example.vcxproj.filters
VS15/GoogleTest/: gtest.vcxproj  gtest.vcxproj.filters
VS15/MDP/: MDP.vcxproj  MDP.vcxproj.filters
VS15/Test/: Test.vcxproj  Test.vcxproj.filters
VSProject/MDP/: MDP.sln
VSProject/MDP/MDP/: MDP.vcxproj  MDP.vcxproj.filters
messenger/: messenger-module.inl  messenger.inl
test/: test-messenger.inl  test-module-a.inl  test-module-b.inl  test-module.inl  test.cpp
(+9 files in other folders)
